--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -219,19 +219,11 @@
                     <i class="icon-paper-plane"></i>
                     <h4>Basic</h4>
                     <div class="price">
-                      <span class="currency">$</span>
-                      <span class="dollars">9</span>
-                      <span class="cents">99</span>
+                  <h1>Hello</h1>
                     </div>
                   </div>
                   <ul class="pricing-features">
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature disabled"><i class="icon-close"></i>Pro and above.</li>
-                    <li class="pricing-feature disabled"><i class="icon-close"></i>Enterprise only.</li>
-                    <li class="pricing-feature disabled"><i class="icon-close"></i>Enterprise only.</li>
-                    <li class="pricing-feature disabled"><i class="icon-close"></i>Enterprise only.</li>
+                    <h1>Hello</h1>
                   </ul>
                 </div>
               </div>
@@ -244,19 +236,11 @@
                     <i class="icon-plane"></i>
                     <h4>Pro</h4>
                     <div class="price">
-                      <span class="currency">$</span>
-                      <span class="dollars">59</span>
-                      <span class="cents">99</span>
+                      <h1>Hello</h1>
                     </div>
                   </div>
                   <ul class="pricing-features">
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>Pro and above.</li>
-                    <li class="pricing-feature disabled"><i class="icon-close"></i>Enterprise only.</li>
-                    <li class="pricing-feature disabled"><i class="icon-close"></i>Enterprise only.</li>
-                    <li class="pricing-feature disabled"><i class="icon-close"></i>Enterprise only.</li>
+                    <h1>Hello</h1>
                   </ul>
                 </div>
               </div>
@@ -269,20 +253,10 @@
                     <i class="icon-rocket"></i>
                     <h4>Enterprise</h4>
                     <div class="price">
-                      <span class="currency">$</span>
-                      <span class="dollars">299</span>
-                      <span class="cents">99</span>
+                      <h1>Hello</h1>
                     </div>
                   </div>
-                  <ul class="pricing-features">
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>10 product uses.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>Enterprise only.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>Enterprise only.</li>
-                    <li class="pricing-feature"><i class="icon-accept"></i>Enterprise only.</li>
-                  </ul>
+                   <h1>Hello</h1>
                 </div>
               </div>
             </div>
@@ -311,12 +285,7 @@
             </div>
           </div>
           <div class="col m6">
-            <div class="phone-preview-halfway">
-              <div class="phone-preview-sizer">
-                <div class="phone-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/530x990)"></div>
-              </div>
-            </div>
+            <!--Content-->
           </div>
           <div class="col m3">
             <div class="perspective-wrapper">
@@ -341,10 +310,7 @@
       <div class="container">
         <div class="row valign-wrapper">
           <div class="col m3">
-            <div class="phone-preview-sizer right-in-out fade-in-out">
-              <div class="phone-preview"></div>
-              <div class="image-container default" style="background-image:url(http://placehold.it/530x990)"></div>
-            </div>
+            <!--Content-->
           </div>
           <div class="col m8 offset-m1">
             <div class="staggered-transition-wrapper">
@@ -383,16 +349,7 @@
             </div>
           </div>
           <div class="col s12 m8">
-            <div class="device-pair">
-              <div class="tablet-preview-sizer">
-                <div class="tablet-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/600x400)"></div>
-              </div>
-              <div class="tablet-preview-sizer left-in-out">
-                <div class="tablet-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/600x400)"></div>
-              </div>
-            </div>
+            <!--Content-->
           </div>
         </div>
       </div>
@@ -403,16 +360,7 @@
       <div class="container">
         <div class="row valign-wrapper">
           <div class="col s12 m8">
-            <div class="device-pair right-side">
-              <div class="tablet-preview-sizer white">
-                <div class="tablet-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/600x400)"></div>
-              </div>
-              <div class="tablet-preview-sizer white right-in-out">
-                <div class="tablet-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/600x400)"></div>
-              </div>
-            </div>
+            <!--Content-->
           </div>
           <div class="col s12 m4">
             <div class="staggered-transition-wrapper">
@@ -440,18 +388,7 @@
               <p>Locavore drinking vinegar quinoa seitan church-key, tilde aliqua. Hoodie mustache aliquip, selfies bitters poutine adipisicing scenester man braid jean shorts. Aliqua mlkshk 90's distillery, truffaut sapiente trust fund fashion axe officia selvage occaecat locavore accusamus. </p>
             </div>
             <div class="device-triplet">
-              <div class="tablet-preview-sizer">
-                <div class="tablet-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/600x400)"></div>
-              </div>
-              <div class="tablet-preview-sizer left-in-out">
-                <div class="tablet-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/600x400)"></div>
-              </div>
-              <div class="tablet-preview-sizer right-in-out">
-                <div class="tablet-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/600x400)"></div>
-              </div>
+              <!--Content-->
             </div>
           </div>
         </div>
@@ -467,20 +404,7 @@
               <h3>This is a cool feature</h3>
               <p>Locavore drinking vinegar quinoa seitan church-key, tilde aliqua. Hoodie mustache aliquip, selfies bitters poutine adipisicing scenester man braid jean shorts. Aliqua mlkshk 90's distillery, truffaut sapiente trust fund fashion axe officia selvage occaecat locavore accusamus. </p>
             </div>
-            <div class="device-triplet">
-              <div class="phone-preview-sizer iphone">
-                <div class="phone-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/530x990)"></div>
-              </div>
-              <div class="phone-preview-sizer iphone left-in-out">
-                <div class="phone-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/530x990)"></div>
-              </div>
-              <div class="phone-preview-sizer iphone right-in-out">
-                <div class="phone-preview"></div>
-                <div class="image-container default" style="background-image:url(http://placehold.it/530x990)"></div>
-              </div>
-            </div>
+          <!--Content-->
           </div>
         </div>
       </div>
