added routes, and images, and about  me section

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,64 +1,62 @@
-
     <!-- Navbar -->
     <nav class="navbar navbar-solid-transition">
       <div class="nav-wrapper">
-        <a href="horizontal-half.html" class="brand-logo"><i class="icon-diamond"></i></a>
+        <a href="/" class="brand-logo"><i class="icon-diamond"></i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li class="active"><a class="dropdown-trigger" href="#!" data-target="pages">Pages<i class="material-icons right">arrow_drop_down</i></a></li>
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="docs/about.html">Docs</a></li>
-          <li><a href="#">Buy Now!</a></li>
+          <li class="active"><a class="dropdown-trigger" href="#!" data-target="pages">Services<i class="material-icons right">arrow_drop_down</i></a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
-
         <ul id="pages" class="dropdown-content">
-          <li><a href="horizontal-half.html">Horizontal Halves</a></li>
-          <li><a href="sierra.html">Zoom Out</a></li>
-          <li><a href="circle-reveal.html">Circle Reveal</a></li>
-          <li><a href="phone-wall.html">Phone Wall</a></li>
-          <li><a class="active" href="element-transitions.html">Element Transitions</a></li>
-          <li><a href="basic-elements.html">Basic Elements</a></li>
-          <li><a href="card-shuffle.html">Shuffle</a></li>
-          <li><a href="postcards.html">Postcards</a></li>
+          <li><a href="/colposcopy">Colposcopy</a></li>
+          <li><a href="/c-section">C-Section</a></li>
+          <li><a href="/cervix">Exicision of Cervix and Lesions</a></li>
+          <li><a href="/curettage">Endocervical Curettage</a></li>
+          <li><a href="/gynecoloic">Gynecoloic Cancer Screening</a></li>
+          <li><a href="/gynecological">Gynecological Surgical Procedures</a></li>
+          <li><a href="/hysterectomy">Hysterectomy and Hysteroscopy</a></li>
+          <li><a href="/myomectomy">Myomectomy</a></li>
+          <li><a href="/laproscopy">Laproscopy</a></li>
         </ul>
-
         <a href="#" data-target="slide-out" class="sidenav-trigger button-collapse right"><i class="material-icons white-text">menu</i></a>
       </div>
     </nav>
+
+    <!--SIDEBAR NAV-->
     <ul id="slide-out" class="sidenav">
       <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
           <li class="bold">
-            <a class="collapsible-header waves-effect waves-teal active">Pages</a>
+            <a class="collapsible-header waves-effect waves-teal active">Services</a>
             <div class="collapsible-body">
               <ul>
-                <li><a href="horizontal-half.html">Horizontal Halves</a></li>
-                <li><a href="sierra.html">Zoom Out</a></li>
-                <li><a href="circle-reveal.html">Circle Reveal</a></li>
-                <li><a href="phone-wall.html">Phone Wall</a></li>
-                <li><a class="active" href="element-transitions.html">Element Transitions</a></li>
-                <li><a href="basic-elements.html">Basic Elements</a></li>
-                <li><a href="card-shuffle.html">Shuffle</a></li>
-                <li><a href="postcards.html">Postcards</a></li>
+                <li><a href="/colposcopy">Colposcopy</a></li>
+                <li><a href="/c-section">C-Section</a></li>
+                <li><a href="/cervix">Exicision of Cervix and Lesions</a></li>
+                <li><a href="/curettage">Endocervical Curettage</a></li>
+                <li><a href="/gynecoloic">Gynecoloic Cancer Screening</a></li>
+                <li><a href="/gynecological">Gynecological Surgical Procedures</a></li>
+                <li><a href="/hysterectomy">Hysterectomy and Hysteroscopy</a></li>
+                <li><a href="/myomectomy">Myomectomy</a></li>
+                <li><a href="/laproscopy">Laproscopy</a></li>
               </ul>
             </div>
           </li>
         </ul>
       </li>
-      <li><a class="waves-effect waves-teal" href="/blog">Blog</a></li>
-      <li><a class="waves-effect waves-teal" href="team.html">Team</a></li>
-      <li><a class="waves-effect waves-teal" href="docs/about.html">Docs</a></li>
-      <li><a class="waves-effect waves-teal" href="#">Buy Now!</a></li>
+      <li><a class="waves-effect waves-teal" href="#About">About</a></li>
+      <li><a class="waves-effect waves-teal" href="#Contact">Contact</a></li>
     </ul>
 
     <div class="section header">
       <div class="background">
-        <img src="http://placehold.it/1440x900" alt="">
+        <img src="/images/clinic.png" alt="">
       </div>
       <div class="header-wrapper row valign-wrapper">
         <div class="col s12">
-          <h1>Element Transitions!</h1>
-          <span class="tagline">Show off your business in a whole new way.</span>
+          <h1>Dr. Wilson Morales</h1>
+          <span class="tagline nameTitle">MD, F.A.C.O.G</span>
+          <span class="tagline nameTitle">Obstetrics - Gynecology</span>
           <button class="read-more"><i class="icon-caret-down"></i></button>
         </div>
       </div>
@@ -68,32 +66,22 @@
       <div class="row valign">
         <div class="col s12 m10 offset-m1">
           <div class="row">
-            <div class="col s12"><h2 class="section-title">Features</h2></div>
+            <div class="col s12 center">
+              <h2 class="section-title">About Dr. Morales</h2>
+            </div>
           </div>
           <div class="row staggered-transition-wrapper" data-duration="0" data-staggereddelay=".9">
-            <div class="col s12 m6 l4 fade-in-out">
-              <h4><i class="icon-light-bulb"></i></h4>
-              <p class="caption">This is a cool feature about your product! It really separates you from the crowd.</p>
+            <div class="col s12 m6 l4 fade-in-out"> 
+             <img src="/images/wilsonstanding.jpg" class="circle wilson" alt="Dr.Morales">
             </div>
-            <div class="col s12 m6 l4 fade-in-out">
-              <h4><i class="icon-bolt"></i></h4>
-              <p class="caption">This is a cool feature about your product! It really separates you from the crowd.</p>
-            </div>
-            <div class="col s12 m6 l4 fade-in-out">
-              <h4><i class="icon-rocket"></i></h4>
-              <p class="caption">This is a cool feature about your product! It really separates you from the crowd.</p>
-            </div>
-            <div class="col s12 m6 l4 fade-in-out">
-              <h4><i class="icon-settings"></i></h4>
-              <p class="caption">This is a cool feature about your product! It really separates you from the crowd.</p>
-            </div>
-            <div class="col s12 m6 l4 fade-in-out">
-              <h4><i class="icon-umbrella"></i></h4>
-              <p class="caption">This is a cool feature about your product! It really separates you from the crowd.</p>
-            </div>
-            <div class="col s12 m6 l4 fade-in-out">
-              <h4><i class="icon-compass"></i></h4>
-              <p class="caption">This is a cool feature about your product! It really separates you from the crowd.</p>
+            <div class="col s12 m6 l8 fade-in-out"> 
+               <h4 class="center"><i class="icon-light-bulb"></i><i class="icon-light-bulb"></i><i class="icon-light-bulb"></i></h4>
+              <p class="caption">For more than 34 years, Dr. Wilson Morales has provided obstetrical and gynecological needs for women throughout Southern California. 
+              Since establishing his private practice, Dr. Morales has helped thousands of women in need of prenatal care, gynecological surgeries, 
+              pap smears, C-sections, and many other services. He is a board certified Obstetrician / Gynecologist, and has printed numerous research publications.</p>
+              <p class="caption">Dr. Morales earned his Doctor of Medicine degree from the Far Eastern University in the Philippines, interned at USAF Hospital Clark 
+              then moved to Chicago, Illinois, completed his Ob-Gyn residency at the Cook County Hospital/ Chicago Medical School in 1979. He became a
+              Clinical Professor for years prior to coming to Southern California to start his Ob-Gyn private practice at the Santa Monica area.</p>
             </div>
           </div>
         </div>
@@ -103,101 +91,77 @@
     <div class="section light full-height">
       <div class="row">
         <div class="col s12 m10 offset-m1 center">
-          <h1>blog</h1>
+          <h1>Our Services</h1>
           <div class="row masonry-grid">
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
                 <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Something Interesting</span>
+                  <a href="/colposcopy"><img src="http://placehold.it/600x400"></a>
+                  <h1 class="card-title center">Colposcopy</h1>
                 </div>
               </div>
             </div>
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
                 <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Another Blog Post</span>
+                  <a href="/c-section"><img src="http://placehold.it/600x400"></a>
+                  <h1 class="card-title center">C-Section</h1>
                 </div>
               </div>
             </div>
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
                 <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Click Bait Article</span>
+                  <a href="/cervix"><img src="http://placehold.it/600x400"></a>
+                  <h1 class="card-title center">Exicision of Cervix and Lesions</h1>
                 </div>
               </div>
             </div>
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
                 <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Don't Read This!</span>
+                  <a href="/curettage"><img src="http://placehold.it/600x400"></a>
+                  <h1 class="card-title center">Endocervical Curettage</h1>
                 </div>
               </div>
             </div>
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
                 <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Why Are You Still Reading?</span>
+                  <a href="/gynecoloic"><img src="http://placehold.it/600x400"></a>
+                <h1 class="card-title center">Gynecoloic Cancer Screening</h1>
                 </div>
               </div>
             </div>
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
                 <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Good Bye</span>
+                  <a href="/gynecological"><img src="http://placehold.it/600x400"></a>
+                <h1 class="card-title center">Gynecological Surgical Procedures</h1>
                 </div>
               </div>
             </div>
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
                 <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Good Bye</span>
+                  <a href="/hysterectomy"><img src="http://placehold.it/600x400"></a>
+                  <h1 class="card-title center">Hysterectomy and Hysteroscopy</h1>
                 </div>
               </div>
             </div>
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
                 <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Good Bye</span>
+                  <a href="/myomectomy"><img src="http://placehold.it/600x400"></a>
+                 <h1 class="card-title center">Myomectomy</h1>
                 </div>
               </div>
             </div>
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
                 <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Good Bye</span>
-                </div>
-              </div>
-            </div>
-            <div class="col s12 m6 l4">
-              <div class="card fade-in-out up-in-out" data-duration="0">
-                <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Good Bye</span>
-                </div>
-              </div>
-            </div>
-            <div class="col s12 m6 l4">
-              <div class="card fade-in-out up-in-out" data-duration="0">
-                <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Good Bye</span>
-                </div>
-              </div>
-            </div>
-            <div class="col s12 m6 l4">
-              <div class="card fade-in-out up-in-out" data-duration="0">
-                <div class="card-image">
-                  <a href="/blog"><img src="http://placehold.it/600x400"></a>
-                  <span class="card-title">Good Bye</span>
+                  <a href="/laproscopy"><img src="http://placehold.it/600x400"></a>
+                <h1 class="card-title center">Laproscopy</h1>
                 </div>
               </div>
             </div>
