--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,8 @@
     <title>Element Transitions - Startup</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="/css/startup-materialize.min.css">
-
+    <link href="/css/startup-materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="/css/main.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
