--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,3 +5,39 @@
 .nameTitle {
     font-size: 2rem !important;
 }
+.caption {
+    font-size: 2.2rem !important;
+    line-height: 2.5rem !important;
+}
+/*Services-------------------------------------------------------------*/
+.cardText{
+    width: 100%;
+    height: 50%;
+    text-align: center;
+    font-size: 4rem !important;
+    color: orange !important;
+    font-weight: 400 !important;
+}
+.cardText1{
+    width: 100%;
+    height: 65%;
+    text-align: center;
+    font-size: 4rem !important;
+    color: darkorange !important;
+    font-weight: 400 !important;
+}
+.cardText2{
+    width: 100%;
+    height: 75%;
+    text-align: center;
+    font-size: 4rem !important;
+    color: blue !important;
+    font-weight: 400 !important;
+}
+.serviceImage {
+    max-height: 350px !important;
+    width: 100% !important;
+}
+.serviceImage:hover {
+    opacity: 0.5 !important;
+}
