--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -51,12 +51,12 @@
    <div class="carousel carousel-slider" data-indicators="true">
       <div class="section header">
       <div class="background">
-         <a class="carousel-item" href="#one!"><img src="/images/clinic.png"></a>
-          <a class="carousel-item" href="#two!"><img src="/images/clinic1.png"></a>
-           <a class="carousel-item" href="#three!"><img src="/images/clinic2.png"></a>
+         <a class="carousel-item" href="#one!"><img class="responsiv-img" src="/images/clinic.png"></a>
+          <a class="carousel-item" href="#two!"><img class="responsiv-img" src="/images/clinic1.png"></a>
+           <a class="carousel-item" href="#three!"><img class="responsiv-img" src="/images/clinic2.png"></a>
       </div>
       <div class="header-wrapper row valign-wrapper">
-        <div class="col s10 m10 l10 center">
+        <div class="col s12 center">
           <h1>Dr. Wilson Morales</h1>
           <span class="tagline nameTitle">MD, F.A.C.O.G</span>
           <span class="tagline nameTitle">Obstetrics - Gynecology</span>
