minor header changes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,7 +58,7 @@
       <div class="header-wrapper row valign-wrapper">
         <div class="col s12 center">
           <h1>Dr. Wilson Morales</h1>
-          <span class="tagline nameTitle">MD, F.A.C.O.G</span>
+          <span class="tagline nameTitle">F.A.C.O.G</span>
           <span class="tagline nameTitle">Obstetrics - Gynecology</span>
           <button class="read-more"><i class="icon-caret-down"></i></button>
         </div>
