--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -53,13 +53,13 @@
       <div class="background">
          <a class="carousel-item" href="#one!"><img class="responsiv-img" src="/images/clinic.png"></a>
           <a class="carousel-item" href="#two!"><img class="responsiv-img" src="/images/clinic1.png"></a>
-           <a class="carousel-item" href="#three!"><img class="responsiv-img" src="/images/clinic2.png"></a>
       </div>
       <div class="header-wrapper row valign-wrapper">
         <div class="col s12 center">
           <h1>Dr. Wilson Morales</h1>
           <span class="tagline nameTitle">F.A.C.O.G</span>
           <span class="tagline nameTitle">Obstetrics - Gynecology</span>
+          <span class="tagline nameTitle bold">16660 Paramount Blvd. Suite #309 Parmount, CA 90723-5459</span>
           <button class="read-more"><i class="icon-caret-down"></i></button>
         </div>
       </div>
