--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -85,7 +85,7 @@
               pap smears, C-sections, and many other services. He is a board certified Obstetrician / Gynecologist, and has printed numerous research publications.</p>
               <p class="caption">Dr. Morales earned his Doctor of Medicine degree from the Far Eastern University in the Philippines, interned at USAF Hospital Clark 
               then moved to Chicago, Illinois, completed his Ob-Gyn residency at the Cook County Hospital/ Chicago Medical School in 1979. He became a
-              Clinical Professor for years prior to coming to Southern California to start his Ob-Gyn private practice at the Santa Monica area.</p>
+              assistant clinical professor for years prior to coming to Southern California to start his Ob-Gyn private practice at the Santa Monica area. He currently operates in the Downey and Long Beach area.</p>
             </div>
           </div>
         </div>
