--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/css/startup-materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
     <link href="/css/main.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <!-- Custom Font -->
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
