--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -95,7 +95,7 @@
     <div class="section light full-height">
       <div class="row">
         <div class="col s12 m10 offset-m1 center">
-          <h1>Our Services</h1>
+          <h1 class="serviceTitle">Our Services</h1>
           <div class="row masonry-grid">
             <div class="col s12 m6 l4">
               <div class="card fade-in-out up-in-out" data-duration="0">
