--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -185,23 +185,29 @@
 <div class="section black full-height">
   <div class="container">
     <div class="row valign-wrapper">
-      <div class="col s12 m8">
-        <!--Content-->
+      <div class="col s12 center">
+        <h1>Insurance</h1>
       </div>
-      <div class="col s12 m4">
-        <div class="staggered-transition-wrapper">
-          <div class="feature fade-left-in-out">
-            <h3>Something</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid odio atque animi culpa, cumque quae ipsam
-            similique repellat, sit blanditiis, molestiae commodi assumenda hic possimus ab mollitia veniam corporis
-            iure?
-          </div>
-          <div class="feature fade-left-in-out">
-            <h3>Something</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid odio atque animi culpa, cumque quae ipsam
-            similique repellat, sit blanditiis, molestiae commodi assumenda hic possimus ab mollitia veniam corporis
-            iure?
-          </div>
+    </div>
+    <div class="row">
+      <div class="col s12 wrapper">
+        <div class="block center fade-in-out">
+          <h2 class="insuranceText">Dummy Text</h2>
+        </div>
+        <div class="block center fade-in-out">
+           <h2 class="insuranceText">Dummy Text</h2>
+        </div>
+        <div class="block center fade-in-out">
+           <h2 class="insuranceText">Dummy Text</h2>
+        </div>
+        <div class="block center fade-in-out">
+         <h2 class="insuranceText">Dummy Text</h2>
+        </div>
+        <div class="block center fade-in-out">
+          <h2 class="insuranceText">Dummy Text</h2>
+        </div>
+        <div class="block center fade-in-out">
+          <h2 class="insuranceText">Dummy Text</h2>
         </div>
       </div>
     </div>
