--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,3 +69,14 @@
 .card-image:hover {
     opacity: 0.6 !important;
 }
+/*Insurance */
+.wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 200px;
+    grid-gap: 1em;
+}
+.block {
+    background: red;
+    border: 1px solid  white;
+}
