--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -299,25 +299,7 @@
 <div class="section light full-height">
   <div class="container">
     <div class="row valign-wrapper">
-      <div class="col s12 m4">
-        <div class="staggered-transition-wrapper">
-          <div class="feature fade-right-in-out">
-            <h3>Something</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid odio atque animi culpa, cumque quae ipsam
-            similique repellat, sit blanditiis, molestiae commodi assumenda hic possimus ab mollitia veniam corporis
-            iure?
-          </div>
-          <div class="feature fade-right-in-out">
-            <h3>Something</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid odio atque animi culpa, cumque quae ipsam
-            similique repellat, sit blanditiis, molestiae commodi assumenda hic possimus ab mollitia veniam corporis
-            iure?
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m8">
-        <!--Content-->
-      </div>
+      <!--Map-->
     </div>
   </div>
 </div>
