--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -388,7 +388,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 17px ;">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h2 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 50px ;letter-spacing: 0px ;text-transform: none ;color: #282828 ;">About Dr. Morales<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h2></div>
+                                                        <h2 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 50px ;letter-spacing: 0px ;text-transform: none ;color: #282828 ;">Meet Dr. Morales<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h2></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
