--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -406,8 +406,8 @@
                                                         School in 1979. He became a
                                                         assistant clinical professor for years prior to coming to Southern California to start his Ob-Gyn private
                                                         practice at the Santa Monica area. He currently operates in the Downey and Long Beach area.</p>
-                                                        <p>Today he lives in Downey, Calfornia. He has resided in the communtiy for years, continuing to server in multiple hospitals in the area as well as for the patients that come to his clinic. 
-                                                        Aside from his work, he is a loving husband, father, grandfather. </p>
+                                                        <p>Today he lives in Downey, Calfornia. He has resided in the communtiy for years, continuing to serve in multiple hospitals in the area as well as for the patients that come to his clinic. 
+                                                        Aside from his work, he is a loving husband, father, grandfather, and he especially loves his pet cat, Toffee. </p>
                                                     </div>
                                                 </div>
                                             </div>
