added fixed height to image on load to avoid resizing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,10 @@
     background-image: url('/images/medical-background.jpg');
 }
 
+.size-stick {
+    height: 100vh !important;
+}
+
 .wrapper-services {
     margin: 0.05em;
     background: white;
