--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -76,7 +76,7 @@
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full-no-space">
                                 <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first" id="gdlr-core-column-3194">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="padding: 200px 0px 200px 0px;" data-sync-height="f1">
-                                            <div class="gdlr-core-pbf-background-wrap wrapper-first-image">
+                                            <div class="gdlr-core-pbf-background-wrap wrapper-first-image size-stick">
                                                 <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(images/winston.jpg) ;background-size: contain ;background-position: center ; background-repeat: no-repeat;" data-parallax-speed="0.05"></div>
                                             </div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content"></div>
