--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -125,7 +125,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 45px ;">
                                                     <div class="gdlr-core-title-item-title-wrap ">
-                                                        <h2 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 50px ;letter-spacing: 0px ;text-transform: none ;color: #ffffff ;">Over 40 Years of Experience <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h2></div>
+                                                        <h2 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 50px ;letter-spacing: 0px ;text-transform: none ;color: #000000 ;">Over 40 Years of Experience <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider" ></span></h2></div>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
@@ -133,9 +133,9 @@
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image" style="margin-top: 12px;margin-right: 25px;"><img src="upload/icon-col-2.png" alt="" width="38" height="42" title="icon-col-2" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap" style="margin-bottom: 10px ;">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" style="font-size: 19px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Certified Professional</h3></div>
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" style="font-size: 19px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ; color: #000000 ">Certified Professional</h3></div>
                                                         <div class="gdlr-core-column-service-content" style="font-weight: 300 ;text-transform: none ;">
-                                                            <p>Dr. Morales is well versed in identifying and taking care of numerous patient issues. His years of experience allows him to expertly peform surgery while always prioritizing the patient's well being, safety, and satisfaction.</p>
+                                                            <p style="color: #000000 ">Dr. Morales is well versed in identifying and taking care of numerous patient issues. His years of experience allows him to expertly peform surgery while always prioritizing the patient's well being, safety, and satisfaction.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -145,9 +145,9 @@
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image" style="margin-top: 13px;margin-right: 25px;margin-left: 10px;"><img src="upload/icon-col-1.png" alt="" width="29" height="43" title="icon-col-1" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap" style="margin-bottom: 10px ;">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" style="font-size: 19px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Trustworthy and Friendly</h3></div>
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" style="font-size: 19px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ; color: #000000">Trustworthy and Friendly</h3></div>
                                                         <div class="gdlr-core-column-service-content" style="font-weight: 300 ;text-transform: none ;">
-                                                            <p>Patients agree that Dr. Morales explains the conditions and treatments very well to them and that he is a very friendly character who is able to answer any question and is someone you can put your faith into.</p>
+                                                            <p style="color: #000000 ">Patients agree that Dr. Morales explains the conditions and treatments very well to them and that he is a very friendly character who is able to answer any question and is someone you can put your faith into.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -157,9 +157,9 @@
                                                     <div class="gdlr-core-column-service-media gdlr-core-media-image" style="margin-top: 12px;margin-right: 25px;margin-left: -5px;"><img src="upload/icon-col-3.png" alt="" width="43" height="43" title="icon-col-3" /></div>
                                                     <div class="gdlr-core-column-service-content-wrapper">
                                                         <div class="gdlr-core-column-service-title-wrap" style="margin-bottom: 10px ;">
-                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" style="font-size: 19px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ;">Accepting Patients and Easily Accessible</h3></div>
+                                                            <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" style="font-size: 19px ;font-weight: 700 ;letter-spacing: 0px ;text-transform: none ; color:#000000">Accepting Patients and Easily Accessible</h3></div>
                                                         <div class="gdlr-core-column-service-content" style="font-weight: 300 ;text-transform: none ;">
-                                                            <p>Able to speak and understand English, Tagalog, and Spanish, Dr. Morales has many patients and he is always looking to help more in his community. With various insurance providers being accepted in his clinic, Dr. Morales is able to tend to numerous patients.</p>
+                                                            <p style="color: #000000 ">Able to speak and understand English, Tagalog, and Spanish, Dr. Morales has many patients and he is always looking to help more in his community. With various insurance providers being accepted in his clinic, Dr. Morales is able to tend to numerous patients.</p>
                                                         </div>
                                                     </div>
                                                 </div>
