--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -371,15 +371,15 @@
                         <div class="gdlr-core-pbf-background-wrap"></div>
                         <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
                             <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-pbf-wrapper-full-no-space">
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first" id="gdlr-core-column-88855">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first top-shadow" id="gdlr-core-column-88855">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " data-sync-height="f3">
                                         <div class="gdlr-core-pbf-background-wrap wrapper-first-image">
-                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(images/wilson-toffee.jpg) ;background-size: contain ;background-position: center ; background-repeat: no-repeat;" data-parallax-speed="0.02"></div>
+                                            <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(images/wilson-toffee.jpg) ;background-size: cover ;background-position: center ; background-repeat: no-repeat;" data-parallax-speed="0.02"></div>
                                         </div>
                                         <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content"></div>
                                     </div>
                                 </div>
-                                <div class="gdlr-core-pbf-column gdlr-core-column-30" id="gdlr-core-column-29425">
+                                <div class="gdlr-core-pbf-column gdlr-core-column-30 top-shadow" id="gdlr-core-column-29425">
                                     <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " style="margin: 0px 0px 0px 0px;padding: 115px 90px 100px 80px;" data-sync-height="f3">
                                         <div class="gdlr-core-pbf-background-wrap wrapper-first-image-none">
                                             <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" data-parallax-speed="0.05"></div>
