--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -818,7 +818,7 @@
                                         <br />
                                 </div>
                             </div>
-                            <div id="nav_menu-3" class="widget widget_nav_menu mediz-widget">
+                            {{!-- <div id="nav_menu-3" class="widget widget_nav_menu mediz-widget">
                                 <h3 class="mediz-widget-title">Hospital Affiliations</h3><span class="clear"></span>
                                 <div class="menu-about-us-container">
                                     <ul id="menu-about-us" class="menu">
@@ -827,7 +827,7 @@
                                         <li class="menu-item">Blue Cross Shield</li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div> --}}
                         </div>
                         <div class="mediz-footer-column mediz-item-pdlr mediz-column-15">
                             <div id="nav_menu-3" class="widget widget_nav_menu mediz-widget">
